tried to link files

--- a/edu_prepvi_capstone_oreo/index.html
+++ b/edu_prepvi_capstone_oreo/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="HandheldFriendly" content="true">
-  <link href="/CSS/main.css" rel="stylesheet">
+  <link href="../CSS/main.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Oreo Restaurant</title>
 
@@ -15,7 +15,7 @@
 <body>
 
   <div class="navbar">
-    <a href="/index.html">Home</a>
+    <a href="index.html">Home</a>
     <div class="dropdown">
       <button class="dropbtn">Menu
         <i class="fa fa-caret-down" style="color:#2E67FA"></i>
@@ -26,8 +26,8 @@
         <a href="#">Refreshments</a>
       </div>
     </div> 
-    <a href="/HTML/about.html">About</a>
-    <a href="/HTML/contact.html">Contact</a>
+    <a href="../HTML/about.html">About</a>
+    <a href="../HTML/contact.html">Contact</a>
     <div class="topnav-right">
       <button class="log-button">Login</button>  
     </div>
