search bar works on the drinsk section

--- a/edu_prepvi_capstone_oreo/index.html
+++ b/edu_prepvi_capstone_oreo/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="HandheldFriendly" content="true">
-  <link href="../CSS/main.css" rel="stylesheet">
+  <link href="../edu_prepvi_capstone_oreo/CSS/main.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Oreo Restaurant</title>
 
@@ -21,13 +21,12 @@
         <i class="fa fa-caret-down" style="color:#2E67FA"></i>
       </button>
       <div class="dropdown-content">
-        <a href="#">Food</a>
-        <a href="#">Drinks</a>
-        <a href="#">Refreshments</a>
+        <a href="../edu_prepvi_capstone_oreo/HTML/food.html">Food</a>
+        <a href="../edu_prepvi_capstone_oreo/HTML/Drinks.html">Drinks</a>
       </div>
     </div> 
-    <a href="../HTML/about.html">About</a>
-    <a href="../HTML/contact.html">Contact</a>
+    <a href="../edu_prepvi_capstone_oreo/HTML/about.html">About</a>
+    <a href="../edu_prepvi_capstone_oreo/HTML/contact.html">Contact</a>
     <div class="topnav-right">
       <button class="log-button">Login</button>  
     </div>
