--- a/edu_prepvi_capstone_oreo/HTML/Drinks.html
+++ b/edu_prepvi_capstone_oreo/HTML/Drinks.html
@@ -22,7 +22,6 @@
                 <a href="../index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
-                <a href="login">Login</a>
             </div>
             <div class="search-box">
                 <input class='input' placeholder="Search drinks" type="text" id="search">
@@ -67,12 +66,12 @@
             <h3 class="shop-item-price">ug.2000/</h3>
             <p><button id="soda" class="btn btn-primary shop-item-button">Add to Cart</button></p>
         </div>
-        <di>
+        <div>
             <img src="../IMAGE/water.jpg" width="250px" height="60%" sizes="60%" class="shop-item-image">
             <h3 class="shop-item-title">Water</h3>
             <h3 class="shop-item-price">ug.2000/</h3>
             <p><button id="water" class="btn btn-primary shop-item-button">Add to Cart</button></p>
-        </di>
+        </div>
         <div>
             <img src="../IMAGE/icecoldmilk.jpg" width="250px" height="60%" sizes="60%" class="shop-item-image">
             <h3 class="shop-item-title">ice-cold milk</h3>
@@ -120,9 +119,9 @@
     <p class="bthp">
         <a href="food.html">Add food</a>
         <a href="../index.html">Back To Home</a>
-
     </p>
-    <footer>contact Oreo resturant<br>OutBox Edu@2020<br>Kamapala</footer>
+    
+    <footer> Oreo Restaurant ©2020</footer>
     <script src="../JS/menu.js"></script>
     <script src="../JS/cart.js"></script>
 </body>
